Slight fix to header (jquery scroll call doesn't work when html has overflow x hidden?)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,6 @@
 .blurg {
   background-image: url('./../public/blurry-gradient-haikei.svg');
 }
-html, body {
+body {
   overflow-x:hidden;
 }
